# ObraFlowv2

./: .dockerignore  .env.example  .gitignore  .replit  AUTOSAVE_CORRECOES_COMPLETAS_V2.md  AUTOSAVE_IMPLEMENTATION_SUMMARY.md  Aplicativo ELP - Validação - 29.04.docx  BACKUP_SUCCESS_REPORT.md  CONFIGURACAO_NOTIFICACOES.md  CONFIGURACAO_SMTP_HOSTINGER.md  CORRECAO_AUTOSAVE_COMPLETA.md  CORRECAO_AUTOSAVE_IMAGENS_DEFINITIVA.md  CORRECAO_DELETE_PDF_RELATORIO_EXPRESS.md  CORRECAO_FOTO_RELATORIO_EXPRESS.md  CORRECAO_PDF_COMPLETA.md  CORRECAO_WORKER_TIMEOUT_IMPLEMENTADA.md  CORRECOES_DEFINITIVAS.md  CORREÇÃO_UPLOAD_IMAGENS.md  DEPLOY_RAILWAY_GUIA.md  DIAGNOSTICO_IMAGENS.md  Dockerfile  FIREBASE_SETUP_GUIDE.md  GOOGLE_DRIVE_SETUP.md  INSTRUCOES_MIGRATION_RAILWAY.md  MIGRATION_RAILWAY_INSTRUCTIONS.md  PATCH_backup_photos.py  PHOTO_UPLOAD_FIX.md  PHOTO_UPLOAD_GUIDE.md  PROBLEMA_E_SOLUCAO_IMAGENS.md  Procfile  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_DEPLOY_FINAL.md  RAILWAY_DEPLOY_GUIDE.md  RAILWAY_DEPLOY_GUIDE_2025.md  RAILWAY_FIX_MIGRATIONS.md  RAILWAY_MIGRATION_INSTRUCTIONS.md  README.md  RESUMO_CORRECOES_ITEM_23.md  RESUMO_CORRECOES_PDF.md  SISTEMA_VALIDACAO_COMPLETA.md  (+142 more)
attached_assets/: Aplicativo ELP - Validação_1763564233640.docx  Pasted--2-Backend-FastAPI-api-relatorios-autosave-Corrigir-endpoint-para-aceitar-atualiza-es-parcia-1762106051657_1762106051657.txt  Pasted--AutoSave-Erro-tentativa-3-3-Error-400-Erro-desconhecido-at-ReportsAutoSave-saveToServer-r-1758569059464_1758569059464.txt  Pasted--Background-on-this-error-at-https-sqlalche-me-e-20-f405-ERROR-app-Stack-trace-completo-Tr-1761920114597_1761920114598.txt  (+267 more)
(+229 files in other folders)
