[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "werkzeug>=3.1.3",
    "sqlalchemy>=2.0.43",
    "flask-mail>=0.10.0",
    "flask-wtf>=1.2.2",
    "wtforms>=3.2.1",
    "reportlab>=4.4.3",
    "pillow>=11.3.0",
    "pdfkit>=1.0.0",
    "wkhtmltopdf>=0.2",
    "openai>=1.100.1",
    "requests>=2.32.4",
    "weasyprint>=66.0",
    "jinja2>=3.1.6",
    "google-api-python-client>=2.179.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "google-auth-httplib2>=0.2.0",
]
