[project]
name = "construction-tracker"
version = "1.0.0"
description = "Sistema de gestão de visitas em obras de construção"
requires-python = ">=3.11"
dependencies = [
    "Flask==3.1.1",
    "Flask-SQLAlchemy==3.1.1", 
    "Flask-Login==0.6.3",
    "Flask-WTF==1.2.2",
    "Flask-Mail==0.10.0",
    "gunicorn==23.0.0",
    "psycopg2-binary==2.9.10",
    "WTForms==3.2.1",
    "Werkzeug==3.1.3",
    "SQLAlchemy==2.0.43",
    "Jinja2==3.1.6",
    "email-validator==2.2.0",
    "Pillow==11.3.0",
    "reportlab==4.4.3",
    "requests==2.32.4",
    "weasyprint==66.0",
    "PyJWT==2.10.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
